# home_work19.2_Upit

./: .env  .env.sample  .gitignore  README.md  auth.json  catalog.json  product.json  pyproject.toml
Catalog/: admin.py  forms.py  models.py  service.py  urls.py  views.py
Catalog/management/commands/: add_in_db.py
Catalog/migrations/: 0001_initial.py  0002_category_product.py  0003_alter_category_options_alter_product_options_and_more.py  0003_product_manufactured_at_alter_product_category.py  0004_alter_product_manufactured_at.py  0004_product_views_count_alter_category_name_and_more.py  0005_version.py  0006_alter_version_options_product_is_active.py  0007_alter_product_options.py  0008_product_owner.py  0009_alter_product_options.py  0010_alter_product_options.py  0011_alter_product_options.py
Catalog/templates/Catalog/: base.html  catalog.html  category_list.html  contacts.html  create_products_view.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html
Catalog/templatetags/: my_tags.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  createblogs.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_alter_user_phone.py  0004_alter_user_options_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_form.html  register.html  (+1 more)
(+1 files in other folders)
