[tool.poetry]
name = "djangohome"
version = "0.1.0"
description = ""
authors = ["Aleksandr <zemacohoznik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
black = "^24.8.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
django-phonenumber-field = "^8.0.0"
flake8 = "^7.1.1"
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false